crates/htui/tests/snapshots/requirements__requirements_amended.snap
---
source: crates/htui/tests/requirements.rs
expression: frame
---
Platform · DESKTOP-HTUI · memory · 1 run
 1 Backlog  2 Skills  3 Requirements  4 Settings  5 Chat
┌ Requirements (3) ─────────────────────────┐┌ R-ENT-1 ────────────────────────────────────────────┐
│▾ htui (3)                                 ││Every item has a stable key of the form PREFIX-N.    │
│  ▾ ENT Entity model (2)                   ││Keys never change.                                   │
│    R-ENT-1  must   Every item has a stabl…││                                                     │
│    R-ENT-2  later  An item may carry a fr…││rationale: Keys are what people type.                │
│  ▾ STO Storage (1)                        ││must · active · v3                                   │
│    R-STO-1  must   Postgres is the source…││                                                     │
│▾ agy (0)                                  ││Coverage                                             │
│  no areas                                 ││ANA-1  addresses v1  ! suspect  done  —              │
│                                           ││ANA-2  amends    v3             open  —              │
│                                           ││                                                     │
│                                           ││Revisions                                            │
│                                           ││v1   created                MM-DD hh:mm              │
│                                           ││v2   amended   by ANA-2     MM-DD hh:mm              │
│                                           ││v3   amended   by ANA-2     MM-DD hh:mm              │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
└───────────────────────────────────────────┘└─────────────────────────────────────────────────────┘
 amended R-ENT-1 to v3
 j/k move  Enter fold  / filter  a area  n new  e amend  W withdraw  r reload
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help · w workspaces · Ctrl+f find
