crates/htui/tests/snapshots/requirements__requirements_minted.snap
---
source: crates/htui/tests/requirements.rs
expression: frame
---
Platform · DESKTOP-HTUI · memory · 1 working · 1 waiting
 1 Backlog  2 Skills  3 Requirements  4 Settings  5 Chat
┌ Requirements (4) ─────────────────────────┐┌ R-ENT-3 ────────────────────────────────────────────┐
│▾ htui (4)                                 ││Every item has a title.                              │
│  ▾ ENT Entity model (3)                   ││                                                     │
│    R-ENT-1  must   Every item has a stabl…││rationale: Titles are what people read.              │
│    R-ENT-2  later  An item may carry a fr…││must · active · v1                                   │
│    R-ENT-3  must   Every item has a title.││                                                     │
│  ▾ STO Storage (1)                        ││Coverage                                             │
│    R-STO-1  must   Postgres is the source…││no item cites it                                     │
│▾ agy (0)                                  ││                                                     │
│  no areas                                 ││Revisions                                            │
│                                           ││v1   created                MM-DD hh:mm              │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
└───────────────────────────────────────────┘└─────────────────────────────────────────────────────┘
 minted R-ENT-3
 j/k move  Enter fold  / filter  a area  n new  e amend  W withdraw  r reload
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help · w workspaces · Ctrl+f find
