crates/htui/tests/snapshots/requirements__requirements_new_area.snap
---
source: crates/htui/tests/requirements.rs
expression: frame
---
Platform · DESKTOP-HTUI · memory · 1 run
 1 Backlog  2 Skills  3 Requirements  4 Settings  5 Chat
┌ Requirements (3) ─────────────────────────┐┌ UI ─────────────────────────────────────────────────┐
│▾ htui (3)                                 ││UI User interface                                    │
│  ▾ ENT Entity model (2)                   ││                                                     │
│    R-ENT-1  must   Every item has a stabl…││0 requirements                                       │
│    R-ENT-2  later  An item may carry a fr…││                                                     │
│  ▾ STO Storage (1)                        ││                                                     │
│    R-STO-1  must   Postgres is the source…││                                                     │
│  ▾ UI User interface (0)                  ││                                                     │
│▾ agy (0)                                  ││                                                     │
│  no areas                                 ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
│                                           ││                                                     │
└───────────────────────────────────────────┘└─────────────────────────────────────────────────────┘
 added area UI
 j/k move  Enter fold  / filter  a area  n new  e amend  W withdraw  r reload
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help · w workspaces · Ctrl+f find
